test/spec_vectors/func/fail/module_36.wat
(module (func $type-value-nums-vs-num (result f32) (f32.const 0) (f32.const 0)))